--- a/app/modules/investwithdraw/views/investWidrawStart.html
+++ b/app/modules/investwithdraw/views/investWidrawStart.html
@@ -2,7 +2,7 @@
 	<div class="col-xs-12 goal-section">
 		<div class="row">
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
-				<div class="goals-cover" click-redirect="/investStep1">
+				<div class="goals-cover" ng-click="goToInvest()">
 						<div class="image-div">
 							<img src="assets/images/invest.png">
 						</div>
@@ -10,7 +10,7 @@
 				<h2>Invest</h2>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
-				<div class="goals-cover" click-redirect="/withdrawStart">
+				<div class="goals-cover" ng-click="goToWithdraw()">
 					<div class="image-div widthDrawImage">
 						<img src="assets/images/withdraw.png">
 					</div>
