--- a/less/invest.less
+++ b/less/invest.less
@@ -15,6 +15,13 @@ section{
 							display:inline-block;
 							position:relative;
 							font-size:50px;
+							span{
+								display: block;
+							word-wrap: break-word;
+							white-space: pre-line;
+							width: 96px;
+							font-size: 38px;
+							}
 						}
 						&.nextline{
 							position:absolute;
