--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -6132,6 +6132,13 @@ section.investStep1 .pie-cover .highcharts-container .highcharts-title span.cont
   position: relative;
   font-size: 50px;
 }
+section.investStep1 .pie-cover .highcharts-container .highcharts-title span.content span {
+  display: block;
+  word-wrap: break-word;
+  white-space: pre-line;
+  width: 96px;
+  font-size: 38px;
+}
 section.investStep1 .pie-cover .highcharts-container .highcharts-title span.nextline {
   position: absolute;
   left: 0px;
