--- a/app/modules/investwithdraw/views/reviewInvestment.html
+++ b/app/modules/investwithdraw/views/reviewInvestment.html
@@ -2,14 +2,15 @@
 	<div class="col-xs-12">
 		<div class="row">
 			<div class="col-xs-8">
-				<div class="table-outer-cover reviewInvest">
+				<div class="table-outer-cover reviewInvest" ng-repeat="recommendedSchemes in $root.recommended_schemes">
 					<div class="seperate-cover" custom-scroll-bar>
-						<div class="table-seperate">
-							<h4>My Retirement Plan</h4>
+					<h4>{{recommendedSchemes.goal_summary.goal}}</h4>
+						<div class="table-seperate" ng-repeat="eachRecommend in recommendedSchemes.recommended_schemes">
+							
 							<div class="thead">
 								<div class="tr">
 									<div class="th">
-										<p>Equity Schemes</p>
+										<p>{{eachRecommend.key}} Schemes</p>
 									</div>
 									<div class="th">
 										<p>Scheme Sub Type</p>
@@ -23,282 +24,18 @@
 								</div>
 							</div>
 							<div class="tbody">
-								<div class="tr">
+								<div class="tr" ng-repeat="schemes in eachRecommend.data">
 									<div class="td">
-										<p class="schemes">Kotal select Focus Growth</p>
-									</div>
-									<div class="td">
-										<p>Large Cap</p>
+										<p class="schemes">{{schemes.fund_name}}</p>
 									</div>
 									<div class="td">
-										<p>Rs.<span class="amount">83,200</span></p>
+										<p>{{schemes.category_name}}</p>
 									</div>
 									<div class="td">
-										<p>-</p>
-									</div>
-								</div>
-								<div class="tr">
-									<div class="td">
-										<p class="schemes">SBI Bluechip Fund Regular Gr..</p>
+										<p>Rs.<span class="amount">{{schemes.sip}}</span></p>
 									</div>
 									<div class="td">
-										<p>Large Cap</p>
-									</div>
-									<div class="td">
-										<p>Rs.<span class="amount">83,200</span></p>
-									</div>
-									<div class="td">
-										<p>-</p>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="table-seperate">
-							<div class="thead">
-								<div class="tr">
-									<div class="th">
-										<p>Equity Schemes</p>
-									</div>
-									<div class="th">
-										<p>Scheme Sub Type</p>
-									</div>
-									<div class="th">
-										<p>SIP</p>
-									</div>
-									<div class="th">
-										<p>Lumpsum</p>
-									</div>
-								</div>
-							</div>
-							<div class="tbody">
-								<div class="tr">
-									<div class="td">
-										<p class="schemes">Kotal select Focus Growth</p>
-									</div>
-									<div class="td">
-										<p>Large Cap</p>
-									</div>
-									<div class="td">
-										<p>Rs.<span class="amount">83,200</span></p>
-									</div>
-									<div class="td">
-										<p>-</p>
-									</div>
-								</div>
-								<div class="tr">
-									<div class="td">
-										<p class="schemes">SBI Bluechip Fund Regular Gr..</p>
-									</div>
-									<div class="td">
-										<p>Large Cap</p>
-									</div>
-									<div class="td">
-										<p>Rs.<span class="amount">83,200</span></p>
-									</div>
-									<div class="td">
-										<p>-</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="table-outer-cover reviewInvest">
-					<div class="seperate-cover" custom-scroll-bar>
-						<div class="table-seperate">
-							<h4>My Retirement Plan</h4>
-							<div class="thead">
-								<div class="tr">
-									<div class="th">
-										<p>Equity Schemes</p>
-									</div>
-									<div class="th">
-										<p>Scheme Sub Type</p>
-									</div>
-									<div class="th">
-										<p>SIP</p>
-									</div>
-									<div class="th">
-										<p>Lumpsum</p>
-									</div>
-								</div>
-							</div>
-							<div class="tbody">
-								<div class="tr">
-									<div class="td">
-										<p class="schemes">Kotal select Focus Growth</p>
-									</div>
-									<div class="td">
-										<p>Large Cap</p>
-									</div>
-									<div class="td">
-										<p>Rs.<span class="amount">83,200</span></p>
-									</div>
-									<div class="td">
-										<p>-</p>
-									</div>
-								</div>
-								<div class="tr">
-									<div class="td">
-										<p class="schemes">SBI Bluechip Fund Regular Gr..</p>
-									</div>
-									<div class="td">
-										<p>Large Cap</p>
-									</div>
-									<div class="td">
-										<p>Rs.<span class="amount">83,200</span></p>
-									</div>
-									<div class="td">
-										<p>-</p>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="table-seperate">
-							<div class="thead">
-								<div class="tr">
-									<div class="th">
-										<p>Equity Schemes</p>
-									</div>
-									<div class="th">
-										<p>Scheme Sub Type</p>
-									</div>
-									<div class="th">
-										<p>SIP</p>
-									</div>
-									<div class="th">
-										<p>Lumpsum</p>
-									</div>
-								</div>
-							</div>
-							<div class="tbody">
-								<div class="tr">
-									<div class="td">
-										<p class="schemes">Kotal select Focus Growth</p>
-									</div>
-									<div class="td">
-										<p>Large Cap</p>
-									</div>
-									<div class="td">
-										<p>Rs.<span class="amount">83,200</span></p>
-									</div>
-									<div class="td">
-										<p>-</p>
-									</div>
-								</div>
-								<div class="tr">
-									<div class="td">
-										<p class="schemes">SBI Bluechip Fund Regular Gr..</p>
-									</div>
-									<div class="td">
-										<p>Large Cap</p>
-									</div>
-									<div class="td">
-										<p>Rs.<span class="amount">83,200</span></p>
-									</div>
-									<div class="td">
-										<p>-</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="table-outer-cover reviewInvest">
-					<div class="seperate-cover" custom-scroll-bar>
-						<div class="table-seperate">
-							<h4>My Retirement Plan</h4>
-							<div class="thead">
-								<div class="tr">
-									<div class="th">
-										<p>Equity Schemes</p>
-									</div>
-									<div class="th">
-										<p>Scheme Sub Type</p>
-									</div>
-									<div class="th">
-										<p>SIP</p>
-									</div>
-									<div class="th">
-										<p>Lumpsum</p>
-									</div>
-								</div>
-							</div>
-							<div class="tbody">
-								<div class="tr">
-									<div class="td">
-										<p class="schemes">Kotal select Focus Growth</p>
-									</div>
-									<div class="td">
-										<p>Large Cap</p>
-									</div>
-									<div class="td">
-										<p>Rs.<span class="amount">83,200</span></p>
-									</div>
-									<div class="td">
-										<p>-</p>
-									</div>
-								</div>
-								<div class="tr">
-									<div class="td">
-										<p class="schemes">SBI Bluechip Fund Regular Gr..</p>
-									</div>
-									<div class="td">
-										<p>Large Cap</p>
-									</div>
-									<div class="td">
-										<p>Rs.<span class="amount">83,200</span></p>
-									</div>
-									<div class="td">
-										<p>-</p>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="table-seperate">
-							<div class="thead">
-								<div class="tr">
-									<div class="th">
-										<p>Equity Schemes</p>
-									</div>
-									<div class="th">
-										<p>Scheme Sub Type</p>
-									</div>
-									<div class="th">
-										<p>SIP</p>
-									</div>
-									<div class="th">
-										<p>Lumpsum</p>
-									</div>
-								</div>
-							</div>
-							<div class="tbody">
-								<div class="tr">
-									<div class="td">
-										<p class="schemes">Kotal select Focus Growth</p>
-									</div>
-									<div class="td">
-										<p>Large Cap</p>
-									</div>
-									<div class="td">
-										<p>Rs.<span class="amount">83,200</span></p>
-									</div>
-									<div class="td">
-										<p>-</p>
-									</div>
-								</div>
-								<div class="tr">
-									<div class="td">
-										<p class="schemes">SBI Bluechip Fund Regular Gr..</p>
-									</div>
-									<div class="td">
-										<p>Large Cap</p>
-									</div>
-									<div class="td">
-										<p>Rs.<span class="amount">83,200</span></p>
-									</div>
-									<div class="td">
-										<p>-</p>
+										<p>{{schemes.lumpsum}}</p>
 									</div>
 								</div>
 							</div>
@@ -322,11 +59,11 @@
 		<div class="calculated-right-cover">
 			<div class="total-text">
 				<span class="placeholder">SIP</span>
-				<p><span class="content">Rs.</span><span class="amount">93,200</span></p>
+				<p><span class="content">Rs.</span><span class="amount">{{sipTotal}}</span></p>
 			</div>
 			<div class="total-text">
 				<span class="placeholder">Lumpsum</span>
-				<p><span class="content">Rs.</span><span class="amount">93,200</span></p>
+				<p><span class="content">Rs.</span><span class="amount">{{lumpSumTotal}}</span></p>
 			</div>
 		</div>
 	</div>
@@ -336,7 +73,7 @@
 		</div>
 		<div class="calculated-right-cover">
 			<div class="total-text">
-				<p><span class="content">Rs.</span><span class="amount">12,12,400</span></p>
+				<p><span class="content">Rs.</span><span class="amount">{{overall_total_sum}}</span></p>
 			</div>
 		</div>
 	</div>
