--- a/app/modules/planinvestment/views/planinvest.html
+++ b/app/modules/planinvestment/views/planinvest.html
@@ -23,7 +23,7 @@
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 invest-outer-cover">
 				<div class="investCover">
-					<div class="checkbox-cover">
+					<div class="checkbox-cover" >
 						<input type="radio" name>
 						<label><span></span></label>
 					</div>
@@ -39,15 +39,15 @@
 				</div>				
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 invest-outer-cover">
-				<div class="investCover">
-					<div class="checkbox-cover">
+				<div class="investCover" ng-class="{'has-covered': $root.goalAnswered['tax'] == true}">
+					<div class="checkbox-cover" ng-if="$root.goalAnswered['tax']">
 						<input type="radio" name>
 						<label><span></span></label>
 					</div>
 					<div class="image-div">
 						<img src="assets/images/saveTax.png">
 					</div>
-					<button click-redirect="/taxsavingStarted" class="fin-app-btn fin-blue full-width">Save Taxes</button>
+					<button ng-click="startGoalAdd('tax')" class="fin-app-btn fin-blue full-width">Save Taxes</button>
 				</div>
 				<div class="col-xs-12 desc">
 					<p class="text-center">Invest in Equity Linked Savings Schemes<span class="nextline">(ELSS) and save taxes under section</span><span class="nextline">80C.</span></p>
