Add identity, nominee, contact infos

--- a/app/modules/registerinvestor/views/nomineeInfo.html
+++ b/app/modules/registerinvestor/views/nomineeInfo.html
@@ -1,3 +1,3 @@
 <section class="swiper-outer-cover">
-	<swiper swiper-name="nomineeInfo" controller-name="registerInvestorController" result="resultObject" callback-fn="appendFormValues(data)" indicator-end="Nominee Info"></swiper>
+	<swiper swiper-name="nomineeInfo" controller-name="nomineeInfoController" result="resultObject" callback-fn="appendFormValues(data)" indicator-end="Nominee Info"></swiper>
 </section>
