--- a/app/modules/registerinvestor/views/registerInvestorInfo.html
+++ b/app/modules/registerinvestor/views/registerInvestorInfo.html
@@ -34,7 +34,7 @@
                                         <img ng-if="false" src="assets/images/checkBlue.png">
                                     </div>
                                 </div>
-                                <p class="not-verified"><span class="content">Contact Info</span><span ng-if="false" class="nextline highlight placeholder addOnlyBold">COMPLETED</span>
+                                <p class="not-verified" click-redirect="/contactInfo"><span class="content">Contact Info</span><span ng-if="false" class="nextline highlight placeholder addOnlyBold">COMPLETED</span>
                                 <span ng-if="true" class="nextline not-verified placeholder addOnlyBold">COMPLETE NOW</span></p>
                             </div>
                         </div>
