--- a/app/modules/common/views/partials/swiper.html
+++ b/app/modules/common/views/partials/swiper.html
@@ -2266,8 +2266,8 @@
                 <div class="swiper-content noPadding">
                      <p class="question">I was born in the city of <span class="swiper-input"><input ng-model="modelVal.placeOfBirth" type="text" name="year" required></span></p>
                      <p class="question">In the country: <select ng-if="countryList" dropdown scroll-height="250" ng-model="modelVal.countryOfBirth"><option ng-selected="$index == 0" ng-repeat="country in countryList" value="{{country.value}}">{{country.value}}</option></select></p>
-                      <p class="question">I worked as a <select dropdown ng-model="modelVal.occupationType"><option value="PRI">Private Sector Service</option><option value="PRO">Professional (Self-Employed)</option><option value="BUS">Business</option><option value="HOU">Housewife</option><option value="PUB">Public Sector Service</option><option value="GOV">Government Service</option><option value="FOR">Forex Dealer</option><option value="AGR">Agriculturist</option><option value="STU">Student</option><option value="OTH">Other (please specify)</option></select></p>
-                      <p class="question">And I make <select dropdown ng-model="modelVal.income" scroll-height="120"><option selected value="1">&lt; 1 Lakhs</option><option value="2">1-5 Lakhs</option><option value="3">5-10 Lakhs</option><option value="4">10-25 Lakhs</option><option value="5">25-100 Lakhs</option><option value="6">&gt; 100 Lakhs</option></select>per year</p>
+                      <p class="question">I worked as a <select dropdown ng-model="modelVal.occupationType"><option ng-selected="(modelVal.occupationType=='PRI'||!modelVal.occupationType)" value="PRI">Private Sector Service</option><option ng-selected="(modelVal.occupationType=='PRO')" value="PRO">Professional (Self-Employed)</option><option  ng-selected="(modelVal.occupationType=='BUS')" value="BUS">Business</option><option  ng-selected="(modelVal.occupationType=='HOU')" value="HOU">Housewife</option><option ng-selected="(modelVal.occupationType=='PUB')" value="PUB">Public Sector Service</option><option ng-selected="(modelVal.occupationType=='GOV')" value="GOV">Government Service</option><option ng-selected="(modelVal.occupationType=='FOR')" value="FOR">Forex Dealer</option><option ng-selected="(modelVal.occupationType=='AGR')" value="AGR">Agriculturist</option><option ng-selected="(modelVal.occupationType=='STU')" value="STU">Student</option><option ng-selected="(modelVal.occupationType=='OTH')" value="OTH">Other (please specify)</option></select></p>
+                      <p class="question">And I make <select dropdown ng-model="modelVal.income" scroll-height="120"><option ng-selected="(modelVal.income=='1')||(!modelVal.income)" selected value="1">&lt; 1 Lakhs</option><option ng-selected="(modelVal.income=='2')" value="2">1-5 Lakhs</option><option ng-selected="(modelVal.income=='3')" value="3">5-10 Lakhs</option><option ng-selected="(modelVal.income=='4')" value="4">10-25 Lakhs</option><option ng-selected="(modelVal.income=='5')" value="5">25-100 Lakhs</option><option ng-selected="(modelVal.income=='6')" value="6">&gt; 100 Lakhs</option></select>per year</p>
                 </div>
             </form>
         </div>
@@ -2356,8 +2356,8 @@
         <div class="swiper-slide">
             <form name="invertorInfoForm1" novalidate>
                 <div class="swiper-content noPadding">
-                      <p class="question">I am a<select dropdown ng-model="modelVal.gender"><option selected value="M">Male</option><option value="F">Female</option></select></p>
-                      <p class="question">and I am<select dropdown ng-model="modelVal.maritalStatus"><option selected value="1">Single</option><option value="2">Married</option></select></p>
+                      <p class="question">I am a<select dropdown ng-model="modelVal.gender"><option ng-selected="(modelVal.gender=='M')||(!modelVal.gender)"  value="M">Male</option><option value="F">Female</option></select></p>
+                      <p class="question">and I am<select dropdown ng-model="modelVal.maritalStatus"><option ng-selected="(modelVal.maritalStatus=='1'||!modelVal.maritalStatus)" value="1">Single</option><option ng-selected="(modelVal.maritalStatus=='2')" value="2">Married</option></select></p>
                       <p class="question">And I am of<select dropdown ng-model="modelVal.nationality"><option selected value="INDIA">INDIAN</option></select>nationality</p>
                 </div>
             </form>
@@ -2393,13 +2393,13 @@
     <span ng-if="(step == 2)" class="placeholder imagePlaceholder">Note: Above image will be used to register your investment account.</span>
 </div>
 
-<div ng-if="swiperName == 'contactInfo'" class="fadeIn swiper-container customSwiper contactInfo type2Sliders" ng-init="step = 1">
+<div ng-if="swiperName == 'contactInfo'" class="fadeIn swiper-container customSwiper contactInfo type2Sliders" ng-init="(typeof(step)==='undefined'||!step) && (step = 1)">
     <div class="swiper-wrapper">
         <div class="swiper-slide">
             <form name="quickInvestForm3" novalidate>
-                <div class="swiper-content noPadding">
+                <div class="swiper-content">
 					  <span class="error-text">Communication Address</span>
-					  <p class="question">I am providing my<select dropdown ng-model="modelVal.communicationAddressType"><option selected value="1">Residential</option><option value="2">Business</option><option value="3">Residential or Business</option><option value="4">Registered Office</option></select>address</p>
+					  <p class="question">I am providing my<select dropdown ng-model="modelVal.communicationAddressType"><option ng-selected="(modelVal.communicationAddressType==1)||(!modelVal.communicationAddressType)" value="1">Residential</option><option ng-selected="(modelVal.communicationAddressType==2)" value="2">Business</option><option ng-selected="(modelVal.communicationAddressType==3)" value="3">Residential or Business</option><option ng-selected="(modelVal.communicationAddressType==4)" value="4">Registered Office</option></select>address</p>
                       <p class="question">My PIN code is <span class="swiper-input"><input ng-model="modelVal.communicationAddress.pincode" type="text" name="pincode" ng-change="quickInvestForm3.pincode.$error.invalidPincode?0:lookupPincode(modelVal.communicationAddress)" required></span></p>
                       <p class="question">and my address is<span class="swiper-input"><input ng-model="modelVal.communicationAddress.addressLine1" type="text" name="year" required></span></p>
                       <p class="question"><span class="swiper-input"><input ng-model="modelVal.communicationAddress.addressLine2" type="text" name="year" required></span></p>
@@ -2410,10 +2410,10 @@
                 </div>
             </form>
         </div>
-        <div class="swiper-slide"  ng-if="$root.selectedCriteria == 'op2' || $root.selectedCriteria == 'op3'">
+        <div class="swiper-slide" ng-if="$root.selectedCriteria =='op2'||$root.selectedCriteria=='op3'">
             <form name="quickInvestForm3" novalidate>
-                <div class="swiper-content noPadding swiperReduceBottomPadding">
-					<p class="question">My address proof is my<select dropdown ng-model="modelVal.addressProofType"><option selected value="1">Passport</option><option value="2">Driving License</option><option value="3">Voter ID Card</option><option value="4">Aadhaar Card</option><option value="5">Bank Statement</option><option value="6">Utility Bill (from last 3 months)</option><option value="7">Ration Card</option><option value="8">Regd Lease / Sale Agreement</option></select></p>                    
+                <div class="swiper-content noPadding">
+					<p class="question">My address proof is my<select dropdown ng-model="modelVal.addressProofType"><option ng-selected="(modelVal.addressProofType==1)||(!modelVal.addressProofType)" value="1">Passport</option><option ng-selected="(modelVal.addressProofType==2)" value="2">Driving License</option><option ng-selected="(modelVal.addressProofType==3)" value="3">Voter ID Card</option><option ng-selected="(modelVal.addressProofType==4)" value="4">Aadhaar Card</option><option ng-selected="(modelVal.addressProofType==5)" value="5">Bank Statement</option><option ng-selected="(modelVal.addressProofType==6)" value="6">Utility Bill (from last 3 months)</option><option ng-selected="(modelVal.addressProofType==7)" value="7">Ration Card</option><option ng-selected="(modelVal.addressProofType==8)" value="8">Regd Lease / Sale Agreement</option></select></p>
 					<input id='upload' accept=".jpg, .png, .jpeg" style="display:none" autoplay onchange="angular.element(this).scope().imageUpload(this, 'frontImageUrl')" type='file'/>
                     <div class="upload-image-cover" upload-file="upload">
                         <div class="image-div">
@@ -2498,7 +2498,7 @@
     <div class="fin-btn-group gotoPages">
         <button class="fin-link-btn content-prev" ng-click="(step != 1) && (step = step - 1)"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
         <button ng-show="(step == 1)" click-redirect="/registerInvestorInfo" class="fin-app-btn fin-skip-btn content-next">SKIP</button>
-        <button ng-show="(step == 1)" ng-click="appendValues(modelVal);getKYCStatus()?(step = step + 1):reloadRoute('op2',1)" ng-disabled="(!modelVal.communicationAddress.pincode)||(!modelVal.communicationAddress.addressLine1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
+        <button ng-show="(step == 1)" ng-click="appendValues(modelVal);(step = step + 1);getKYCStatus()?0:reloadRoute('op2',1)" ng-disabled="(!modelVal.communicationAddress.pincode)||(!modelVal.communicationAddress.addressLine1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
         <button ng-show="(step == 2) && ($root.selectedCriteria=='op2'||$root.selectedCriteria=='op3')" ng-click="(step=step+1)" class="fin-app-btn fin-skip-btn content-next">SKIP</button>
         <button ng-show="(step == 2) && ($root.selectedCriteria=='op2'||$root.selectedCriteria=='op3')" ng-click="appendValues(modelVal);saveCommunicationAddressImage();(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
         <button ng-show="((step == 3) && ($root.selectedCriteria=='op2'||$root.selectedCriteria=='op3'))||((step == 2) && ($root.selectedCriteria=='op1'))" click-redirect="/registerInvestorInfo" class="fin-app-btn fin-skip-btn content-next">SKIP</button>
@@ -2521,7 +2521,7 @@
                       </div>
                       <div ng-show="!modelVal.nomineeAbsent">
                       <p class="question">My nominee name is <span class="swiper-input"><input ng-model="modelVal.nomineeName" type="text" name="year" required></span></p>
-                      <p class="question">and my relationship with them is <select dropdown ng-model="modelVal.relationshipWithInvestor"><option selected value="1">Spouse</option><option value="2">Parent</option><option value="3">Offspring</option><option value="4">Sibling</option><option value="5">Other</option></select></p>
+                      <p class="question">and my relationship with them is <select dropdown ng-model="modelVal.relationshipWithInvestor"><option ng-selected="(modelVal.relationshipWithInvestor==1)||(!modelVal.relationshipWithInvestor)" value="1">Spouse</option><option ng-selected="(modelVal.relationshipWithInvestor==2)" value="2">Parent</option><option ng-selected="(modelVal.relationshipWithInvestor==3)" value="3">Offspring</option><option ng-selected="(modelVal.relationshipWithInvestor==4)" value="4">Sibling</option><option ng-selected="(modelVal.relationshipWithInvestor==5)" value="5">Other</option></select></p>
                       <p class="question">and they were born on <span class="swiper-input"><input type="text" class="datepicker" placeholder="DD/MM/YYYY" data-datepicker="{theme: 'flat',dateformat: 'YYYY-MM-DD'}" data-ng-model="modelVal.nomineeDob"></span></p>
                       <div class="checkbox-cover">
                         <input type="checkbox" required id="option1Type2" name="option2" ng-model="modelVal.addressAreEqual" value="true"><label for="option1Type2"><span></span>Their address is same as mine.</label>
