--- a/app/modules/common/views/partials/swiper.html
+++ b/app/modules/common/views/partials/swiper.html
@@ -496,7 +496,7 @@
         <div class="swiper-slide">
             <form name="retirementForm1" novalidate>
                 <div class="swiper-content content-1">
-                      <p class="question">My goal name is<span class="swiper-input global-input addMarginLeft"><input type="text" name="year" required ng-model="modelVal.A1"/></span></p>
+                      <p class="question">My goal name is<span class="swiper-input global-input addMarginLeft"><input type="text" name="year" ng-init="modelVal.A1 = modelVal.A1 || 'My investment'" required ng-model="modelVal.A1"/></span></p>
                       <span class="placeholder">Use maximum 20 characters, alphabets and/or numbers</span>
                 </div>
             </form>
@@ -644,7 +644,7 @@
         <div class="swiper-slide">
             <form name="retirementForm1" novalidate>
                 <div class="swiper-content content-1">
-                      <p class="question">My goal name is <span class="swiper-input global-input"><input type="text"  required ng-model="modelVal.A1"></span></p>
+                      <p class="question">My goal name is <span class="swiper-input global-input"><input type="text" ng-init="modelVal.A1 = modelVal.A1 || 'My retirement'" required ng-model="modelVal.A1"></span></p>
                       <span class="placeholder">Use maximum 20 characters, alphabets and/or numbers</span>
                 </div>
             </form>
@@ -871,7 +871,7 @@
         <div class="swiper-slide">
             <form name="retirementForm1" novalidate>
                 <div class="swiper-content content-1">
-                      <p class="question">My goal name is<span class="swiper-input global-input addMarginLeft"><input type="text" name="year" required ng-model="modelVal.A1"></span></p>
+                      <p class="question">My goal name is<span class="swiper-input global-input addMarginLeft"><input type="text" ng-init="modelVal.A1 = modelVal.A1 || 'My education'" name="year" required ng-model="modelVal.A1"></span></p>
                       <span class="placeholder">Use maximum 20 characters, alphabets and/or numbers</span>
                       <span class="placeholder">We recommend naming the goal after the person for whom the goal is being setup</span>
                 </div>
@@ -1090,7 +1090,7 @@
         <div class="swiper-slide">
             <form name="retirementForm1" novalidate>
                 <div class="swiper-content content-1">
-                      <p class="question">My goal name is<span class="swiper-input global-input addMarginLeft"><input type="text" name="year" required ng-model="modelVal.A1"></span></p>
+                      <p class="question">My goal name is<span class="swiper-input global-input addMarginLeft"><input type="text" name="year" ng-init="modelVal.A1 = modelVal.A1 || 'My Property'" required ng-model="modelVal.A1"></span></p>
                       <span class="placeholder">Use maximum 20 characters,alphabets and/or numbers</span>
                       <span class="placeholder">We recommended naming the goal after the location where you want to buy the property</span>
                 </div>
@@ -1348,7 +1348,7 @@
         <div class="swiper-slide">
             <form name="retirementForm1" novalidate>
                 <div class="swiper-content content-1">
-                      <p class="question">My goal name is<span class="swiper-input global-input addMarginLeft"><input type="text" name="year" required ng-model="modelVal.A1"></span></p>
+                      <p class="question">My goal name is<span class="swiper-input global-input addMarginLeft"><input type="text" name="year" ng-init="modelVal.A1 = modelVal.A1 || 'My Automobile'" required ng-model="modelVal.A1"></span></p>
                       <span class="placeholder">Use maximum 20 characters,alphabets and/or numbers</span>
                       <span class="placeholder">We recommended naming the goal after the vehicle you want to buy</span>
                 </div>
@@ -1567,7 +1567,7 @@
         <div class="swiper-slide">
             <form name="retirementForm1" novalidate>
                 <div class="swiper-content content-1">
-                      <p class="question">My goal name is<span class="swiper-input global-input addMarginLeft"><input type="text" name="year" required ng-model="modelVal.A1"></span></p>
+                      <p class="question">My goal name is<span class="swiper-input global-input addMarginLeft"><input type="text" name="year" ng-init="modelVal.A1 = modelVal.A1 || 'My Vacation'" required ng-model="modelVal.A1"></span></p>
                       <span class="placeholder">Use maximum 20 characters,alphabets and/or numbers</span>
                       <span class="placeholder">We recommended naming the goal after the location you are planning your vacation at.</span>
                 </div>
@@ -1786,7 +1786,7 @@
         <div class="swiper-slide">
             <form name="retirementForm1" novalidate>
                 <div class="swiper-content content-1">
-                      <p class="question">My goal name is<span class="swiper-input global-input addMarginLeft"><input type="text" name="year" required ng-model="modelVal.A1"></span></p>
+                      <p class="question">My goal name is<span class="swiper-input global-input addMarginLeft"><input type="text" ng-init="modelVal.A1 = modelVal.A1 || 'My Wedding'" name="year" required ng-model="modelVal.A1"></span></p>
                       <span class="placeholder">Use maximum 20 characters,alphabets and/or numbers</span>
                       <span class="placeholder">We recommended naming the goal after the person whose wedding is being planned</span>
                 </div>
@@ -2006,7 +2006,7 @@
         <div class="swiper-slide">
             <form name="retirementForm1" novalidate>
                 <div class="swiper-content content-1">
-                      <p class="question">My goal name is<span class="swiper-input global-input addMarginLeft"><input type="text" name="year" required ng-model="modelVal.A1"></span></p>
+                      <p class="question">My goal name is<span class="swiper-input global-input addMarginLeft"><input type="text" name="year" ng-init="modelVal.A1 = modelVal.A1 || 'My Event'" required ng-model="modelVal.A1"></span></p>
                       <span class="placeholder">Use maximum 20 characters,alphabets and/or numbers</span>
                       <span class="placeholder">We recommended naming this goal after your investment objective with this goal</span>
                 </div>
@@ -2161,7 +2161,7 @@
         <div class="swiper-slide">
             <form name="retirementForm1" novalidate>
                 <div class="swiper-content content-1">
-                      <p class="question">My goal name is<span class="swiper-input global-input addMarginLeft"><input type="text" name="year" required ng-model="modelVal.A1"></span></p>
+                      <p class="question">My goal name is<span class="swiper-input global-input addMarginLeft"><input type="text" name="year" ng-init="modelVal.A1 = modelVal.A1 || 'My tax saving'" required ng-model="modelVal.A1"></span></p>
                       <span class="placeholder">Use maximum 20 characters,alphabets and/or numbers</span>
                       <span class="placeholder">We recommended naming this goal after the year of tax planning</span>
                 </div>
