--- a/less/smartpolio.less
+++ b/less/smartpolio.less
@@ -446,4 +446,19 @@ section{
 		.PIXEL2EM(18);
 		padding-left: 22px;
   	}
+  	.schemePortfolioTop{
+  		ul{
+  			li{
+  				list-style: none;
+  			}
+  		}
+  	}
+
+  	.schemePortfolioBottom{
+  		ul{
+  			li{
+  				list-style: none;
+  			}
+  		}
+  	}
 }
