--- a/less/trackperformance.less
+++ b/less/trackperformance.less
@@ -356,7 +356,15 @@ section{
 					    margin-top: 0;
 					    margin-bottom: 0px;
 					}
+					.transactionEach {
+						background-color: #e6eef4;
+					    margin: 16px 0px;
+					    padding-top: 16px;
+					    padding-left: 32px;
+					    border-radius: 19px;
+					}
 				}
+
 			}
 		}
 		.chart-main-tabs{
